# seblight

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  PAPER.md  PUBLISH.md  README.md  SECURITY.md  pyproject.toml  seblight_run.py
.github/workflows/: tests.yml
seblight/: __init__.py  bench.py  repomapper.py
seblight/adapters/: __init__.py  docker_adapter.py  file_adapter.py  ssh_adapter.py
seblight/cli/: main.py
seblight/core/: __init__.py  broker.py  executor.py  ledger.py  models.py  policy.py
tests/: test_seblight.py
